--- a/CookingWithCPP/CookingWithCPP/CookingWithCPP.vcxproj
+++ b/CookingWithCPP/CookingWithCPP/CookingWithCPP.vcxproj
@@ -144,6 +144,14 @@
   <ItemGroup>
     <ClInclude Include="main.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Customer\Customer.vcxproj">
+      <Project>{cea42ad3-a09c-47dc-82f0-506ecdf16772}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\RestaurantOwner\RestaurantOwner.vcxproj">
+      <Project>{06d0beef-21d5-4696-8f1d-57269dd53c1f}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
