--- a/CookingWithCPP/CookingWithCPP/CookingWithCPP.vcxproj.filters
+++ b/CookingWithCPP/CookingWithCPP/CookingWithCPP.vcxproj.filters
@@ -20,7 +20,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="main.h">
+    <ClInclude Include="CookingWithCPP.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
